# subboard-next-backend

./: .gitignore  Cargo.toml  config-template.toml  readme.md
.github/workflows/: win-build.yml
src/: main.rs  paper.rs  question.rs  questions.rs  tests.rs
static/: paper.html  questions.html
