[package]
name = "subboard-next-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
dmds = { version = "0.1", git = "https://github.com/DM-Earth/dmds.git" }
dmds-tokio-fs = { version = "0.1", git = "https://github.com/DM-Earth/dmds.git" }
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = { version = "0.11", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "*"
bincode = "1.3"
toml = "0.8"
thiserror = "1.0"
fastrand = "2.0"
axum-macros = "0.4"
tower = "0.4"
mime = "*"
serde_json = "1.0"
