[package]
name = "subboard-next-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
dmds = "0.1"
dmds-tokio-fs = "0.1"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = { version = "0.11", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "*"
bincode = "1.3"
toml = "0.8"
thiserror = "1.0"
fastrand = "2.0"

[dev-dependencies]
tower = "0.4"
mime = "0.3"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
http-body-util = "0.1"
